Fixes and upgrade to Django 2.2

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
+braintree==3.53.0
 certifi==2018.4.16
 chardet==3.0.4
 defusedxml==0.5.0
-Django==2.1.5
+Django==2.2
 django-allauth==0.36.0
 idna==2.7
 oauthlib==2.1.0
 python3-openid==3.1.0
 pytz==2018.4
-requests==2.20.0
+requests==2.21.0
 requests-oauthlib==1.0.0
+sqlparse==0.3.0
 stripe==1.82.1
-urllib3==1.23
+urllib3==1.24.2
